# rusty-autoclicker

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.cargo/: config  config.toml
.github/workflows/: build_artifacts.yml  linux_build.yml  macos_build.yml  release.yml  rust.yml  rust_check.yml  windows_build.yml
docs/: index.html  sw.js
src/: app.rs  constants.rs  defines.rs  gui.rs  icon.rs  lib.rs  main.rs  types.rs  utils.rs
src/gui/: mod.rs  windows.rs
src/gui/sections/: bars.rs  buttons.rs  click_config.rs  mod.rs
