[package]
name = "rusty-autoclicker"
version = "2.1.0"
repository = "https://github.com/MrTanoshii/rusty-autoclicker"
readme = "README.md"
rust-version = "1.63"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
device_query = "1.1"
eframe = "0.19"                                                     # Gives us egui, epi and web+native backends
image = "0.24.2"
rdev = "0.5"
sanitizer = { version = "0.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
# https://github.com/mxre/winres/issues/40
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }

[features]
default = []
persistence = [
    "eframe/persistence",
    "serde",
] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 3     # all optimizations
lto = true
codegen-units = 1
strip = true

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

[package.metadata.winres]
